Heri | #3127 & #3122 | Updating & fixing alignement on pricing page

--- a/datawinners/media/css/scss/util_public.scss
+++ b/datawinners/media/css/scss/util_public.scss
@@ -155,3 +155,11 @@ span.tooltip{
 .none{
     display:none;
 }
+
+.padding_left_10{
+    padding-left: 10px !important;
+}
+
+.padding_right_10{
+    padding-right: 10px !important;
+}
